--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "broccoli-psd-field",
+  "name": "broccoli-field-psd",
   "version": "0.0.1-alpha.1+nb",
   "description": "",
   "main": "libs/server.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pickles2/broccoli-psd-field.git"
+    "url": "git+https://github.com/pickles2/broccoli-field-psd.git"
   },
   "author": "Misaki Shibata",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pickles2/broccoli-psd-field/issues"
+    "url": "https://github.com/pickles2/broccoli-field-psd/issues"
   },
-  "homepage": "https://github.com/pickles2/broccoli-psd-field#readme",
+  "homepage": "https://github.com/pickles2/broccoli-field-psd#readme",
   "dependencies": {
     "cheerio": "^0.19.0",
     "desktop-utils": "git://github.com/tomk79/node-desktop-utils.git",
