Breaking change: Problems with upper-case letters in npm is causing … us to rename the package, so renaming package to "jsonpath-plus" (there are already package with lower-case "jsonpath" or "json-path"). The new name also reflects that
https://github.com/s3u/JSONPath/commit/d459d31ac0b5577c29e424689db8a5cc5410d9b7

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "twig": "^0.8.2",
     "underscore": "^1.8.3",
 
-    "JSONPath": "git://github.com/s3u/JSONPath.git",
+    "jsonpath-plus": "git://github.com/s3u/JSONPath.git",
     "br-resouce": "git://github.com/m-prj/br-resouce.git",
     "filereader": "^0.10.3",
     "fs-extra": "^0.24.0",
